authelia/authelia-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
      - name: authelia
        image: authelia/authelia:latest
        volumeMounts:
        - name: config-volume
          mountPath: /config
        ports:
        - containerPort: 9091
      volumes:
      - name: config-volume
        configMap:
          name: authelia-config
