authelia/authelia-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  ports:
  - name: http
    port: 9091
    targetPort: 9091
  selector:
    app: authelia
