authelia/authelia-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: authelia.starsys.fr
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: ingress-authelia
  namespace: authelia
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - authelia.starsys.fr
    secretName: authelia-tls
  rules:
  - host: authelia.starsys.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authelia
            port:
              number: 9091
